--- a/css/style.css
+++ b/css/style.css
@@ -167,13 +167,14 @@ nav#nav a:hover::after {
 
 /* Profile Image */
 .profile-image {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   object-fit: cover;
-  border: 2px solid var(--accent-cyan);
-  box-shadow: 0 0 20px var(--accent-cyan);
-  margin-top: 2rem;
+  border: 1px solid var(--accent-cyan);
+  box-shadow: 0 0 10px var(--accent-cyan);
+  margin-left: 1rem;
+  vertical-align: middle;
 }
 
 /* Typography */
