--- a/css/style.css
+++ b/css/style.css
@@ -109,10 +109,26 @@ header#header {
   overflow: hidden;
 }
 
+.image-rotator {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .profile-image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.profile-image.active {
+  opacity: 1;
+  z-index: 1;
 }
 
 .hero-title {
