--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,14 @@ nav#nav a:hover::after {
   vertical-align: middle;
 }
 
+.profile-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    display: block;
+}
+
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Orbitron', monospace;
